force-app/main/default/objects/LineItems_Woocomerce__c/LineItems_Woocomerce__c.object-meta.xml
<CustomObject>
    <label>LineItem Woocomerce</label>
    <nameField>
        <label>Nombre de LineItems Woocomerce</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LineItems Woocomerce</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>