force-app/main/default/objects/LineItems_Woocomerce__c/fields/Order_Woocomerce__c.field-meta.xml
<CustomField>
    <fullName>Order_Woocomerce__c</fullName>
    <label>Order Woocomerce</label>
    <referenceTo>Order_Woocomerce__c</referenceTo>
    <relationshipLabel>LineItems Woocomerce</relationshipLabel>
    <relationshipName>LineItems_Woocomerce</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>