force-app/main/default/objects/LineItems_Woocomerce__c/fields/PriceBookEntry__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry__c</fullName>
    <label>PriceBookEntry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>