force-app/main/default/objects/LineItems_Woocomerce__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LineItems Woocomerce</relationshipLabel>
    <relationshipName>LineItems_Woocomerce</relationshipName>
    <type>Lookup</type>
</CustomField>