force-app/main/default/objects/LineItems_Woocomerce__c/fields/Producto_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>LineItems Woocomerce</relationshipLabel>
    <relationshipName>LineItems_Woocomerce</relationshipName>
    <type>Lookup</type>
</CustomField>