force-app/main/default/objects/LineItems_Woocomerce__c/fields/subtotal_tax__c.field-meta.xml
<CustomField>
    <fullName>subtotal_tax__c</fullName>
    <label>subtotal tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>