force-app/main/default/objects/LineItems_Woocomerce__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>