force-app/main/default/objects/LineItems_Woocomerce__c/fields/Woocomerce_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Woocomerce_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Woocomerce Order Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>