force-app/main/default/objects/LineItems_Woocomerce__c/fields/Woocomerce_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Woocomerce_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Woocomerce Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>